# Game-of-Life

./: .breakpoints  coords.txt  glider.txt  gosper_glider_gun.txt  loaf.txt  lwss.txt  main.py  pyproject.toml
coords/: beacon.txt  beehive.txt  blinker.txt  block.txt  coords.txt  example.txt  pulsar.txt  simkin_glider_gun.txt  toad.txt
