[tool.poetry]
name = "repl-nix-game-of-life"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_game_of_life"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
